# spinnaker_ros_interface

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  manifest.xml  package.xml
cmake/: FindSPINNAKER.cmake
config/: blackfly-s.lua  blackfly-s_19423356.lua  blackfly-s_19423356_raw.lua  blackfly-s_19423367.lua  blackfly-s_19423367_raw.lua  blackfly-s_ecocar_23226640_raw.lua  blackfly-s_ecocar_23226641_raw.lua  blackfly-s_ecocar_23512004_raw.lua  blackfly-s_ecocar_23512005_raw.lua  blackfly-s_ecocar_23512006_raw.lua
launch/: left_raw.launch  spinnaker_ros_interface.launch  spinnaker_ros_interface_stereo.launch  spinnaker_ros_interface_stereo_ecocar.launch  spinnaker_ros_stereo_proc.launch
scripts/: set_leftcam_info.bash  set_rightcam_info.bash
spinnaker_driver/: install_spinnaker.sh
src/: ImageFormatControl.cpp  spinnaker_ros_interface_main.cc
